tests/a/tests/integrity/fail/fn/fn.3.stderr
error: expected {a,root}{a,root}, found {root}{c,root}
  --> tests/integrity/fail/fn/fn.3.rs:11:20
   |
11 |         let _ = id(5);
   |                    ^
